Courses preferred entry box
* New course entry box for courses the student would like to take
* Updated placeholder text in other entry boxes

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -21,14 +21,21 @@
     <h1>Advisor System</h1>
     <form>
       <select
-          data-placeholder="Classes taken..."
+          data-placeholder="Which courses have you already taken..."
           class="course-select"
           style="width:95%;"
           multiple=""
           tabindex="3">
       </select>
       <select
-          data-placeholder="Classes waived..."
+          data-placeholder="Have you had any required courses waived..."
+          class="course-select"
+          style="width:95%;"
+          multiple=""
+          tabindex="3">
+      </select>
+      <select
+          data-placeholder="Which courses would you like to take..."
           class="course-select"
           style="width:95%;"
           multiple=""
