point index.html at new courses file

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -49,7 +49,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/chosen.jquery.min.js"></script>
     <script>
-        $.getJSON( "mock-data/courses.json", function( json ) {
+        $.getJSON( "mock-data/courses2.json", function( json ) {
             var items = [];
             $.each( json, function( key, val ) {
               items.push( "<option value='" + key + "'>" + val + "</option>" );
