--- a/htdocs/advisorform.html
+++ b/htdocs/advisorform.html
@@ -122,7 +122,6 @@
 									id="course-select"
 									multiple=""
 									tabindex="3"
-									onload="getCourses()">
 								</select></td>
 							</TR>
 							<TR> 
@@ -157,7 +156,6 @@
 									id="prefered-select"
 									multiple=""
 									tabindex="3"
-									onload="getPrefered()">
 								</select></TD></TR>
 
 							<TR>
@@ -232,7 +230,7 @@
 				</table></div></td><td style="width:5%"></td>
 				<td style="width:45%; text-align:left; vertical-align:text-top"> <div id="GradReq">
 				<p><h3>Graduation Requirements:</h3></p>
-				<p id='core'>Core Courses Remaining:</br><a class='remaining' id='remaining'></a></p>
+				<p id='core' >Core Courses (in green) Remaining:</br><a class='remaining' id='remaining'></a></p>
 				<p id='fivek'>6/6 5000 Level or Higher</p>
 				<p id='sixk'>1/1 6000 Level Class<p>
 				<p id='thirtyhours'>30/30 Hours Remaining</p>
@@ -245,6 +243,7 @@
 		  	<p><FONT color="red">*</FONT>&nbsp;First time students must get their schedule approved by Kimberly.</p>
 		  	<p><FONT color="red">*</FONT>&nbsp;You must attend 5 seminars prior to graduation.</p>
 		  	<p><FONT color="red">*</FONT>&nbsp;After completing 21 hours, if you want to graduate in the coming term, you must file your intent.</p>
+			<p><FONT color="red">*</FONT>&nbsp;Students must mainatin at least 3.0 and get minimum of B- in courses below 5000.</p>
 	  	</div></td></tr></table>
 		  <!--<button type='button' name='back' id='back' onclick="Back()" style="visibility:hidden">Back</button>-->
 
