--- a/htdocs/advisorform.html
+++ b/htdocs/advisorform.html
@@ -179,6 +179,7 @@
 									<option value = "3">3 courses</option>
 									<option value = "4">4 courses</option>
 									</select>
+										<input type='checkbox' id='graphplan' checked='checked'>Use GraphPlan?</input>
 									</TD>
 								</TR>
 							</TR>
@@ -229,7 +230,7 @@
 				</table></div></td><td style="width:5%"></td>
 				<td style="width:45%; text-align:left; vertical-align:text-top"> <div id="GradReq">
 				<p><h3>Graduation Requirements:</h3></p>
-				<p id='core' >Core Courses (in green) Remaining:</br><a class='remaining' id='remaining'></a></p>
+				<p id='core' >Core Courses Remaining:</br><a class='remaining' id='remaining'></a></p>
 				<p id='fivek'>6/6 5000 Level or Higher</p>
 				<p id='sixk'>1/1 6000 Level Class<p>
 				<p id='thirtyhours'>30/30 Hours Remaining</p>
